<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="#eaf4f4"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#eaf4f4"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="147dp"
                    android:layout_height="107dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/createaccount"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/provideInfo"
                    android:textSize="15dp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="25dp"
                    android:text="@string/username"
                    android:textColor="#E92C0C"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edtdesign"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="5dp"
                    android:hint="@string/usernameHint"
                    android:inputType="textPersonName"
                    android:longClickable="false"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="25dp"
                    android:text="@string/email"
                    android:textColor="#E92C0C"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edtdesign"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="5dp"
                    android:hint="@string/emailhint"
                    android:inputType="textEmailAddress"
                    android:longClickable="false"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="25dp"
                    android:text="@string/password"
                    android:textColor="#E92C0C"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edtdesign"
                    android:drawableLeft="@drawable/lock"
                    android:drawableRight="@drawable/visibility_off"
                    android:drawablePadding="5dp"
                    android:hint="@string/passwordhint"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="25dp"
                    android:text="@string/ConfirmPassword"
                    android:textColor="#E92C0C"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/edt_rePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edtdesign"
                    android:drawableLeft="@drawable/lock"
                    android:drawableRight="@drawable/visibility_off"
                    android:drawablePadding="5dp"
                    android:hint="@string/ConfirmPasswordHint"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#62929e"
                    android:text="@string/Register"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="180dp"
                    android:layout_marginTop="-40dp"
                    android:backgroundTint="#62929e"
                    android:text="@string/back"
                    android:textAllCaps="false" />

                <CheckBox
                    android:id="@+id/showpass"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="Show password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/orwith"
                    android:textColor="#E92C0C"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/alreadyhaveacc" />

                <TextView
                    android:id="@+id/LoginTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Login"
                    android:textColor="@color/link" />
        </LinearLayout>

</LinearLayout>