<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Changepassok">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo1"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enterNewPass"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/userID"
            android:textSize="12sp"
            android:textColor="#E92C0C"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/edt_userID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:hint="@string/userIDhint"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="5dp"
            android:background="@drawable/edtdesign"
            android:inputType="textPersonName"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/username"
            android:textSize="12sp"
            android:textColor="#E92C0C"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:hint="@string/usernameHint"
            android:layout_marginTop="5dp"
            android:background="@drawable/edtdesign"
            android:inputType="textPersonName"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/enterNewPass"
            android:textSize="12sp"
            android:textColor="#E92C0C"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/edt_newpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edtdesign"
            android:hint="@string/passwordhint"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/ConfirmPassword"
            android:textSize="12sp"
            android:textColor="#E92C0C"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/edt_renewpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ConfirmPasswordHint"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edtdesign"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="5dp"
            />


        <CheckBox
            android:id="@+id/showpass"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="Show password"/>

        <Button
            android:id="@+id/btn_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changePass"
            android:textAllCaps="false"
            android:backgroundTint="#62929e"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>
</RelativeLayout>